@@ -16,11 +16,12 @@ class RehashPasswords extends Command
         $users = User::all();
 
         foreach ($users as $user) {
-            $user->password = Hash::make($user->password);
-            $user->save();
+            if (Hash::needsRehash($user->password)) {
+                $user->password = Hash::make($user->password);
+                $user->save();
+            }
         }
 
         $this->info('Passwords rehashed successfully.');
     }
 }
-
