@@ -1,13 +1,0 @@
-<?php
-
-namespace App\Http\Controllers;
-
-use Illuminate\Http\Request;
-
-class DelegueController extends Controller
-{
-    public function index()
-    {
-        return view('dashboards.delegue');
-    } 
-}
