@@ -1,0 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Délègue Dashboard</title>
+</head>
+
+<body>
+    <h1>Délègue Dashboard</h1>
+    <p>Welcome! You are a chef departement .</p>
+    <!-- Add your delegue-specific content here -->
+</body>
+
+</html>
